@@ -1,5 +1,13 @@
 2015-02-11  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* ld-plugin/plugin-27.d: New.
+	* ld-plugin/plugin-28.d: Likewise.
+	* ld-plugin/plugin-29.d: Likewise.
+	* plugin.exp (plugin_tests): Add tests for LDPL_FATAL, LDPL_ERROR
+	and LDPL_WARNING.
+
+2015-02-11  H.J. Lu  <hongjiu.lu@intel.com>
+
 	PR ld/17878
 	* ld-plugin/func.c: Add some comments.
 	* ld-plugin/plugin-13.d: New file.
